testdata/cases/analyze/invalid_regexp.expected
error[invalid-regexp]: error parsing regexp: missing closing ]: `[`
  ┌─ testdata/cases/analyze/invalid_regexp.go:8:21
  │
8 │ 	regexp.MustCompile(invalidRegexp)
  │ 	                   ^^^^^^^^^^^^^

found 1 issue: 1 error
